# aria

./: AGENTS.md  AGENTS_zh.md  GETTING_STARTED.md  GETTING_STARTED_zh.md  README.md  README_zh.md  pyproject.toml
.claude/commands/academic/: convert2docs_zh.md
.github/prompts/: academic-convert2docs.prompt.md
